<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <Button
        android:id="@+id/frontVideoBt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/frontvideo" />
    
    <Button
        android:id="@+id/behindVideoBt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/frontVideoBt"
        android:text="@string/behindvideo" />
  
    <Button
        android:id="@+id/serverVideoBt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/behindVideoBt"
        android:text="@string/servervideo" />
    
    <Button
        android:id="@+id/cancelBt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/serverVideoBt"
        android:text="@string/cancel" />
    
</RelativeLayout>